@@ -8,6 +8,7 @@ BUGFIX:
 * type=address/service | fix for actions=name-rename - to skip if string length > 63
 * type=address actions=value-host-object-add-netmask-m32 | skip if IPv6 address
 * type=playbook | skip creating out file for usage of html-merger
+* type=address | improvement for ipv6 if 'actions=name-rename:host.pub_$$value.no-netmask$$-$$netmask$$'
 
 GENERAL:
 * class PanoramaConf | improve output if parentDG can not be calculated for DeviceGroup
